2005-08-23  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.3.92

2005-08-23  Jean-Philippe Guillemin  <jp.guillemin@free.fr>

	* network.pl.in: patch to enable gateway saving under Slackware
	and Zenwalk. Closes GNOME Bug #313210

2005-08-08  Carlos Garnacho Parro  <carlosg@gnome.org>

        * Release 1.3.2

2005-08-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Applied patch to improve groups descriptions, closes GNOME bug
	#308685 (Corey Burger, Guillaume Desmottes)

2005-08-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* service-list.pl.in: Added role for FTP servers

2005-08-06  Carlos Garnacho Parro  <carlosg@gnome.org>

	* service-list.pl.in: Added some more services/roles

2005-07-26  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.3.1

2005-07-16  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: (gst_network_get_gateway_data)
	(gst_network_get_default_gateway): added, use them for Debian

2005-07-15  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in (gst_network_get_interface_type): set more strict
	regexp, so irlan[0-9] isn't confused with an[0-9]

2005-07-05  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.3.0

2005-07-05  Carlos Garnacho Parro  <carlosg@gnome.org>

	* service-list.pl.in: added roles stuff
	* service.pl.in: use roles, separate priorities for each runlevel
	* services-conf.in: use this stuff

2005-06-30  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in, network.pl.in, platform.pl.in, service.pl.in:
	Added patch from the KUbuntu people for the network backend, should
	search the rest of the Ubuntu patches and apply them... Thanks to the
	KUbuntu team :). UPDATE: It's from Juan Luis Baptiste, sorry about
	this

2005-06-21  Christian Meyer  <chrisime@gnome-de.org>

	* network-conf.in, network.pl.in, platform.pl.in, service.pl.in,
	services-conf.in, shares-conf.in, time-conf.in, users-conf.in: Added
	support for Vida Linux OS 1.2
